--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "dependencies": {
+    "faker": "^5.1.0",
+    "mongoose": "^5.11.11"
   }
 }
