--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "seed": "node seeds/seeds.js"
+    "seed": "node seeds/seeds.js",
+    "server": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "faker": "^5.1.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11"
