--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles",
     "seed": "node seeds/seeds.js",
-    "server": "nodemon ./server/index.js"
+    "server": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "supertest": "^6.1.1"
   },
   "dependencies": {
     "express": "^4.17.1",
