--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:10.23.0
+      - image: circleci/mongo:4.4.1
 
     steps:
       - checkout
