--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,20 @@
 version: 2.1
 jobs:
-  build:
+  run_tests:
     docker:
       - image: circleci/node:10.23.0
-      - image: circleci/mongo:4.4.1
 
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - run:
+          name: Install npm dependencies
+          command: |
+            npm install --save
+      - run:
+          name: Run Unit Tests
+          command: |
+            npm test
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
