--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,23 @@ jobs:
   run_tests:
     docker:
       - image: circleci/node:10.23.0
+      - image: circleci/mongo:4.4.1
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - run:
-          name: Install npm dependencies
-          command: |
-            npm install --save
-      - run:
-          name: Run Unit Tests
-          command: |
-            npm test
-      - store_test_results:
-          path: test-results
-      - store_artifacts:
-          path: test-results
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      - run: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+      # - store_test_results:
+      #     path: test-results
+      # - store_artifacts:
+      #     path: test-results
