--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --forceExit",
     "seed": "node seeds/seeds.js",
     "server": "nodemon ./server/server.js"
   },
