--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,25 @@
-version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+version: 2
+jobs:
+  run_tests:
+    docker:
+      - image: circleci/node:10.23.0
+      - image: circleci/mongo:4.4.1
 
+    working_directory: ~/repo
 
-
-
-# version: 2.1
-# jobs:
-#   run_tests:
-#     docker:
-#       - image: circleci/node:10.23.0
-#       - image: circleci/mongo:4.4.1
-
-#     working_directory: ~/repo
-
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys:
-#             - v1-dependencies-{{ checksum "package.json" }}
-#             - v1-dependencies-
-#       - run: npm install
-#       - save_cache:
-#           paths:
-#             - node_modules
-#           key: v1-dependencies-{{ checksum "package.json" }}
-#       - run: npm test
-      # - store_test_results:
-      #     path: test-results
-      # - store_artifacts:
-      #     path: test-results
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      - run: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
