--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Front End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
     "seed": "node seeds/seeds.js",
-    "server": "nodemon ./server/server.js"
+    "start": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
