--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Front End Capstone Project",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test jest -runInBand --detectOpenHandles --forceExit",
     "seed": "node seeds/seeds.js",
     "start": "nodemon ./server/server.js"
   },
