--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test jest -runInBand --detectOpenHandles --forceExit",
     "seed": "node seeds/seeds.js",
-    "start": "nodemon ./server/server.js"
+    "start": "nodemon ./server/server.js",
+    "client": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,11 @@
   },
   "homepage": "https://github.com/hrsjo3-bigbrain/bestbuy-itemdetails#readme",
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.2.3",
+    "@babel/preset-env": "^7.12.11",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -28,14 +33,19 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "supertest": "^6.1.1"
+    "supertest": "^6.1.1",
+    "webpack": "^2.2.1",
+    "webpack-cli": "^4.3.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "core-js": "^3.8.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.11"
+    "mongoose": "^5.11.11",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
