--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
     "react": "^17.0.1",
