--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.8.2",
     "cors": "^2.8.5",
+    "eslint-plugin-jest": "^24.1.3",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "jquery": "^3.5.1",
