--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest -runInBand --detectOpenHandles --forceExit --collectCoverage",
-    "seed": "node seeds/seeds.js",
+    "seed": "node seeds/seed.js",
+    "seedairpods": "node seeds/airPodsMaxSeed.js",
     "start": "nodemon ./server/server.js",
     "client": "webpack --watch"
   },
@@ -50,6 +51,7 @@
     "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
