--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/hrsjo3-bigbrain/bestbuy-itemdetails#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.12.10",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.17.0",
@@ -37,9 +37,10 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
     "supertest": "^6.1.1",
-    "webpack": "^2.2.1",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.4.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -53,6 +54,7 @@
     "mongoose": "^5.11.11",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "regenerator-runtime": "^0.13.7"
   }
 }
