--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "jsdom": "16.4.0",
+    "jsdom-global": "3.0.2",
     "style-loader": "^2.0.0",
     "supertest": "^6.1.1",
     "webpack": "^4.46.0",
