--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed": "node seeds/seed.js",
     "seedairpods": "node seeds/airPodsMaxSeed.js",
     "start": "nodemon ./server/server.js",
-    "client": "webpack --watch"
+    "client": "webpack"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "grunt": "^1.3.0",
+    "grunt-run": "^0.8.1",
     "jest": "^26.6.3",
     "jsdom": "16.4.0",
     "jsdom-global": "3.0.2",
@@ -45,6 +47,7 @@
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.833.0",
     "body-parser": "^1.19.0",
     "core-js": "^3.8.2",
     "cors": "^2.8.5",
