--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
+    "newrelic": "^7.1.1",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
