--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test jest -runInBand --detectOpenHandles --forceExit --collectCoverage",
     "seed": "node ./database/seed.js",
-    "start": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "client": "webpack"
   },
   "repository": {
